# osl

./: .gitignore  README.md  flake.nix  osl.cabal
examples/: mini-sudoku.osl  sum.osl
halo2-template/: Cargo.nix  Cargo.toml  README.md  flake.nix
halo2-template/src/: entry-point.rs  main.rs  prelude.rs
src/: Cast.hs  Trace.hs
src/Halo2/: ArithmetizationConfig.hs  ByteDecomposition.hs  Circuit.hs  CircuitEdits.hs  Codegen.hs  MungeLookupArguments.hs  Polynomial.hs  ProverClient.hs  RemoveLookupGates.hs
src/Halo2/Types/: CircuitEdit.hs  ColumnIndex.hs  FixedBound.hs  FixedColumn.hs  FixedValues.hs  TargetDirectory.hs
src/OSL/: ActusDictionary.hs  EntryPoint.hs  Format.hs  FromHaskell.hs  Translate.hs  TranslatedEvaluation.hs
src/OSL/Types/: Cardinality.hs  ErrorMessage.hs  OSL.hs  Stages.hs
src/Semicircuit/: CountCases.hs  ToLogicCircuit.hs
src/Stark/Types/: Scalar.hs
src/Trace/: FromLogicCircuit.hs  Semantics.hs  ToArithmeticAIR.hs  ToArithmeticCircuit.hs  Types.hs
src/Trace/Types/: EvaluationContext.hs
test/OSL/Spec/: FromHaskellSpec.hs  Gen.hs  MiniSudokuSpec.hs  OSLSpec.hs  SudokuSpec.hs  SumSpec.hs
