[package]
name = "halo2-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13.0"
halo2_proofs = { git = "https://github.com/Polytopoi/halo2.git", rev = "eb38ed04a1c99e6c8153b921aa18c62d332b38ed", features = [ "unstable-dynamic-lookups" ] }
pasta_curves = "0.5"
rand_core = { version = "0.6", features = [ "getrandom" ] }
